--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
+
+ <link rel="preload" href="assets/css/main.css" as="style">
+  <link rel="preload" href="assets/js/main.js" as="script">
+  <link rel="preload" href="html/#other-works" as="html">
+
 <!--styles-->
  <link rel ="stylesheet" href="assets/css/main.css">
- <div class = "header">
+
+
+
+
+ <div class = "header ">
  	
  <div>
  </head>
@@ -24,7 +33,7 @@
 <body> 
 
 	<div class="header-background ">
-	<header class = "header header--sticky">
+	<header class = "header header--sticky ">
 		
 		<div class = "container header__container">
 
@@ -98,12 +107,39 @@ I am knowledgable in object oriented development and Java is my language of choi
 			<div class = "row">
 				<div class="other-works">
 				<h2 class = "title-flex">Other works</h2>
-			<h3 class = "other-works__article-title"><a class="other-works__article-link = href="">Sample other-works</h3>	
-			<h3 class = "other-works__article-title"><a class="other-works__article-link = href="">Sample other-works</h3>	
-			<h3 class = "other-works__article-title"><a class="other-works__article-link = href="">Sample other-works</h3>	
-			<h3 class = "other-works__article-title"><a class="other-works__article-link = href="">Sample other-works</h3>	
-			</div>
-			</section>
+				<p class ="hero__description animate-pop-in med--col-5 lrg--col-7">
+While working as a Digital Media Consultant/Tutor I was involved in development of various graphical content which includes: Logos, Brochures, Infographics, 3D models,magazines, photoshop images, animations, cards, video montages and promotional videos and presentations. Here are some examples of my work:
+<p>
+<div class="responsive title-flex">
+  <div class="gallery">
+    <a target="_blank" href="assets/images/demo-helmet.png">
+      <img src="assets/images/demo-helmet.png" alt="Cinque Terre" width="600" height="400">
+    </a>
+    <div class="desc">3D model of Daft-Punk helmet designed using AutoDesk Fusion 360</div>
+  </div>
+</div>
+
+
+<div class="responsive title-flex">
+  <div class="gallery">
+    <a target="_blank" href="assets/images/demo-logo.png">
+      <img src="assets/images/demo-logo.png" alt="Forest" width="600" height="400">
+    </a>
+    <div class="desc">A logo designed using Adobe Photoshop</div>
+  </div>
+</div>
+
+<div class="responsive title-flex">
+  <div class="gallery">
+    <a target="_blank" href="https://www.youtube.com/watch?v=dx2cN7LRv-Q&t=25s">
+      <img src="assets/images/demo-video.jpg" alt="youtube video" width="600" height="400">
+    </a>
+    <div class="desc">A promo video for the Commons at the Queen Elizabeth II Library designed in Adobe Premiere </div>
+  </div>
+</div>
+	</div>
+	 <a href ="https://eportfolio.mun.ca/afr741"><p>Check out more in my second portfolio...</p></a>
+	</section>
 		
  	<section id = "contact" class = "contact">
 	<h2 class = "contact__title white center">Get in Touch</h2>
@@ -121,6 +157,6 @@ I am knowledgable in object oriented development and Java is my language of choi
 			<li class = "footer-list__item"> ©Anushervon Rakhmatov 2018. All Rights Reserved</li>
 			<ul>
 	</footer>
- 	<script src="assets/js/main.js"></script>>
+ 	<script src="assets/js/main.js"></script>
 </body>
 </html>
